[package]
name = "onefourtest"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "onefourtest"

[dependencies]
hdi = "=0.2.2"
hdk = "=0.1.2"

[dev-dependencies]
holochain = { version = "=0.1.4", features = ["test_utils"], default-features = false }
holochain_integrity_types = "=0.1.2"
rusqlite = { version = "*", features = ["bundled"] }
